navbar and card hover overlapping fixed

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
     display:flex;
     justify-content:space-around;
     
-    z-index: 10;
+    z-index: 50;
     width:100vw;
     
     margin:10 auto;
